11/7/17
 - fixed called to non-existing GHitAllocator
 - implemented G4GRun RecordEvent and Merge. Merge will write the output file
 - fixed call to non-existing digitization routine if the plugin does not exists

11/6/17
 - renamed grun to g4grun to distinguish from mlibrary gruns.
 - adding gDigitizationGlobal private member of runAction and run.

11/3/17
 - starting event recording and merging

11/2/17
 - added options to event action
 - added utilities to print event infos at beginning and end

11/1/17
 - checking if hit is new
 - passing hitbitset to hit constructor
 - added isThisANewTouchable function to check if a touchable already exists in the event

10/31/17
 - registering sensitive detector in GDetectorConstruction::ConstructSDandField() despite g4 documentation

10/19/17
 - added registerGVolumeTouchable to fill touchable map in gsensitivedetector
 - adding gTouchable constructor and registering in the sensitive detector map

10/18/17
 - removed timeWindow, now in parameters inside digitization plugin
 - added utility to retrieve gTouchable in sensitive detector
 - removed showing of constants every time sens. detector is initialized. Better doing it in grun for every run only.

10/16/17
 - using WORLDNAME defined in gsystem.h
 - using NOTAPPLICABLE defined in gvolume.h


10/9/17
 - passing the global map to GDetectorConstruction then to the local sensitive detectors
 - checking that we do not already have a GSensitiveDetector
 - better glog symbol and formatting
 - added threadLog option to select thread to listen to
 - registering SD dector to G4 SD Manager
 - picking the digitization from the global map
 - passing options to initGemcG4RunManager to use threadLog


10/6/17
 - removing sensitive map from GDetectorConstruction constructSD: this is thread local, let us not modify global pointer
 - added method getSensitiveVolumes() to retrieve the the sensitive names and their paths from gsetup, so the plugins can be loaded